--- a/css/media.css
+++ b/css/media.css
@@ -2,10 +2,13 @@
 @media (min-width: 0px) and (max-width: 700px) {
    h3 {
     font-size: 18px;
+       margin-top: 10px;
 }
-    
-  .row div{
+    .row div{
         padding: 0px!important;
-    }    
+    }   
+   .btn-primary{
+font-size: 12px!important;
+    }
     
 }
