--- a/css/media.css
+++ b/css/media.css
@@ -2,13 +2,14 @@
 @media (min-width: 0px) and (max-width: 700px) {
    h3 {
     font-size: 18px;
-       margin-top: 15px;
+       margin-top: 10px;
 }
     .row div{
         padding: 0px!important;
     }   
    .btn-primary{
 font-size: 12px!important;
+       margin: 10px;
     }
     
 }
